syntax = "proto3";
package com.example.products;

option java_multiple_files = true;
option java_package = "com.example.gen.proto";

service Products {
  rpc getProduct (ProductRequest) returns (ProductResponse) {}
  rpc getAllProducts(EmptyParams) returns (MultiProductResponse) {}
}

message EmptyParams {}

message ProductRequest {
  int32 id = 1;
}

message ProductResponse {
  string name = 1;
  string description = 2;
}

message MultiProductResponse {
  repeated Product products = 1;
}

message Product {
  string name = 1;
  string description = 2;
  int32 id = 3;
}

